# intradays

./: .gitignore  LICENSE  README.md  jupyter-test.ipynb  pyproject.toml
Intraday/notebooks/: get_trades_from_production.ipynb  nl_fish_analytics.ipynb
Intraday/sources/: dk1-dayahead-vwap-2025-01-16.csv  dk2-dayahead-vwap-2025-01-16.csv
Intraday/src/: BotTrader.py  Elexon.py  NethFish.py
