[tool.poetry]
name = "dev-clone1"
version = "0.1.0"
description = ""
authors = ["David Nagy LT <dn@aarhus-energy.com>"]
readme = "README.md"
packages = [{include = "cookiecutter", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
black = "^24.10.0"
ruff = "^0.7.1"
pytest = "^8.3.3"
pre-commit = "^4.0.1"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
powerbot-client = "^2.20.0"
scikit-learn = "^1.6.1"
pydantic = "^2.10.5"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

exclude = ["excluded_file.py"]
lint.select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

